# FOC_AxDr

./: .gitignore
AxDrFOC_G431/: .cproject  .mxproject  .project  AxDrFOC_G431.ioc  CMakeLists.txt  stm32g4.cfg
AxDrFOC_G431/Core/Inc/: main.h  spi.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
AxDrFOC_G431/Core/Src/: adc.c  dma.c  fdcan.c  gpio.c  main.c  spi.c  stm32g4xx_it.c  tim.c  usart.c
AxDrFOC_G431/cmake/stm32cubemx/: CMakeLists.txt
AxDrFOC_G431/modules/Inc/: graphics.h  ws281x.h
AxDrFOC_G431/modules/Src/: graphics.c  lcd_image.c  ws281x.c
